--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   </head>
   <body>
     <h1>My Favorite Bands</h1>
+    <div class="sidebar">
+    <h3>More Info Links:</h3>
+      <ul>
+        <li><a href="https://en.wikipedia.org/wiki/Madonna_(entertainer)">Madonna</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Ace_of_Base">Ace of Base</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/No_Doubt">No Doubt</a></li>
+        <li><a href="mailto:webmaster@example.com">Contact me</a></li>
+      </ul>
+    </div>
+
     <div class="column">
       <h2>Madonna</h2>
       <img src="img/madonna.jpg" alt="Madonna">
