add background colors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </div>
 
-    <div class="column">
+    <div class="column1">
       <h2>Madonna</h2>
       <img src="img/madonna.jpg" alt="Madonna">
         <p><span class="name">Madonna</span> Louise Ciccone born August 16, 1958 is an American singer, songwriter, actress, and businesswoman. Referred to as the <span class="important">"Queen of Pop"</span> since the 1980s, Madonna is known for pushing the boundaries of songwriting in mainstream popular music and for the imagery she uses onstage and in music videos. She has frequently reinvented her music and image while maintaining autonomy within the recording industry. Although having sparked controversy, her works have been praised by music critics. Madonna is often cited as an influence by other artists.</p>
@@ -24,16 +24,17 @@
         <p>Madonna signed with Sire Records in 1982 and released her eponymous debut album the next year. She followed it with a series of successful albums, including global bestsellers Like a Virgin (1984) and True Blue (1986) as well as Grammy Award winners Ray of Light (1998) and Confessions on a Dance Floor (2005). Many of her songs have reached the top of record charts worldwide, including "Like a Virgin", "La Isla Bonita", "Like a Prayer", "Vogue", "Take a Bow", "Frozen", "Music", "Hung Up", and "4 Minutes".</p>
     </div>
 
-    <div class="column">
+    <div class="column2">
       <h2>Ace of Base</h2>
       <img src="img/aceofbase.jpg" alt="Ace of Base">
         <p><span class="name">Ace of Base</span> is a Swedish pop group, originally consisting of Ulf Ekberg and three siblings, Jonas Berggren, Linn Berggren and Jenny Berggren. The group released four studio albums between 1992 and 2002, and sold 50 million records worldwide, making them the third-most successful Swedish band of all time, after ABBA and Roxette.</p>
 
         <p>Happy Nation reissued <span class="important">as The Sign</span> is one of the best-selling debut albums of all time, and was certified nine times platinum in the United States.It was the first debut album to produce three No. 1 singles on the Billboard Mainstream Top 40 chart: "All That She Wants", "The Sign" and "Don't Turn Around".</p>
-    </div>
-    <br><br>
 
-    <div class="column">
+        <p>While "Wheel of Fortune" was a modest success, a different song led Ace of Base to take off internationally. After hearing Kayo's "Another Mother", a top 20 hit in Sweden, the band decided that it was exactly the sound they wanted to create.</p>
+    </div>
+
+    <div class="column3">
       <h2>No Doubt</h2>
       <img src="img/nodoubt.jpg" alt="No Doubt">
         <p><span class="name">No Doubt</span> is an American rock band from Anaheim, California, formed in 1986. The band consists of vocalist Gwen Stefani, guitarist Tom Dumont, bassist Tony Kanal, and drummer Adrian Young. Since the mid 1990s, they have been supported by trombonist Gabrial McNair and trumpeter Stephen Bradley in live performances.</p>
